--- a/profes.html
+++ b/profes.html
@@ -66,8 +66,9 @@
         <main>
             <div class="doble">
                 <div class="idea">
-                    <img src="Petru_mejora_clase10.png">
+                    <img src="Petru_visualizacio%CC%81n_final.png">
                 </div>
+                <div class="uno">
                     <p>¿Cómo se relaciona su nota aprobatoria previa, de Proyecto de Título I, con la nota definida por la comisión examinadora de Proyecto de Título II?</p>
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 65 65" id="slope"></svg>
                 </div>
